ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.2.11
    • Affects Version/s: 3.2.9
    • Component/s: Sharding
    • Fully Compatible
    • ALL
    • Hide

      1. Create a sharded cluster with 2 shards.
      2. Split a sharded collection into 4 chunks (e.g. c1, c2, c3, c4)
      3. Move two chunks into another shard (e.g. c2, c3)
      4. Merge the chunks c2 and c3

      Show
      1. Create a sharded cluster with 2 shards. 2. Split a sharded collection into 4 chunks (e.g. c1, c2, c3, c4) 3. Move two chunks into another shard (e.g. c2, c3) 4. Merge the chunks c2 and c3
    • Sharding 2016-10-10, Sharding 2016-10-31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      mergeChunks fails with empty error message if merging chunks that were moved.

      This issue was originally reported in Google Groups: https://groups.google.com/forum/#!topic/mongodb-user/cN6Etk06S4g

      The error shown in the mongo shell is:

      { "ok" : 0, "errmsg" : "" }
      

      The error shown in the log is:

      BadValue: chunk operation commit failed: version 3|2||57eb2b8706ec6135f8ef76eb doesn't exist in namespacetest.test. Unable to save chunk ops.
      

      The cause for the error is that the version mentioned in the logs doesn't exist in the chunks collection in the config database. It was looking for version (3,2), while the last entry in the chunks collection is version (3,1).

      Jstest to reproduce the issue is attached.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kevin Adistambha
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: