SERVER-26365 Make mergeChunks use collection version for applyOps precondition